--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="container2" class="container2">
+        <div class="snow"></div>
+    </div>
     <div class="container">
         <h1>Grade Calculator</h1>
+        <h3>To be a deanslister u need an overall grade of 90</h3>
         <form id="grade-form">
             <label for="prelim-grade">Prelim Grade:</label>
             <input type="number" id="prelim-grade" step="0.01" required>
